k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: default # Ensure both deployments are in the same namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: docker.io/vikasz1/vite-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: default # Ensure both services are in the same namespace
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: default # Ensure both deployments are in the same namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-app
          image: docker.io/vikasz1/fastapi-backend:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
  namespace: default # Ensure both services are in the same namespace
spec:
  type: NodePort
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30081
